# cbr-deploy-custom-sites

./: .gitmodules  README.md  pyproject.toml  pytest.ini
.github/actions/cbr-custom-update-zip-file/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_deploy_custom_sites/deploy/: CBR_Deploy__Custom_Sites__Lambda.py
cbr_deploy_custom_sites/flows/: Flow__Update_CBR_Custom_Zip_File.py
cbr_deploy_custom_sites/utils/: Version.py
deploy/docker/cbr_xyz__from_pip/: Dockerfile  docker-compose.yml
tests/integration/deploy/: test_CBR_Deploy__Custom_Sites__Lambda.py
tests/integration/flows/: test_Flow__Update_CBR_Custom_Zip_File.py
tests/integration/lambdas/dev/: test_lambda__hello_world.py
tests/unit/utils/: test_Version.py
