[tool.poetry]
name        = "cbr_deploy_custom_sites"
version     = "v0.3.1"
description = "CBR - Deploy Custom Sites"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-deploy-custom-sites"
repository  = "https://github.com/the-cyber-boardroom/cbr-deploy-custom-sites"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-aws     = "*"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
